# modelguy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_html5.bat  embed_shaders.cmake
src/: MdlRenderer.cpp  MdlRenderer.h  Model.cpp  Model.h  ModelType.cpp  ModelType.h  Renderer.cpp  Renderer.h  base_resample.h  main.cpp  main_ems.cpp  mstream.cpp  mstream.h  shell.html  studio.h  types.h  util.cpp  util.h
src/gl/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  primitives.h
src/lib/: json.hpp
src/shaders/: cvert_frag.glsl  cvert_vert.glsl  mdl_frag.glsl  mdl_legacy_vert.glsl  mdl_vert.glsl  mdl_wire_frag.glsl  mdl_wire_legacy_vert.glsl  mdl_wire_vert.glsl
src/util/: colors.cpp  colors.h  mat4x4.cpp  mstream.h  util.cpp  util.h
